# ord_dart

./: CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: runnable.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: .gitignore  README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/integration_test/: simple_test.dart
example/ios/: .gitignore
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/: .gitignore
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
integration_test/: simple_test.dart
ios/: ord_dart.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ord_dart.dart  rune.dart
lib/src/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
libord/: Cargo.toml
libord/src/: frb_generated.rs
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/: ord_dart.podspec
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  rune.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: ord.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: ord.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
