[package]
name = "ord"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bitcoin = "0.30.2"
flutter_rust_bridge = { package = "flutter_rust_bridge", version = "=2.0.0" }
hex = "0.4.3"
ordinals = "0.0.8"

[build-dependencies]
flutter_rust_bridge_codegen = { version = "2.0.0" }
anyhow = { version = "1.0.64", features = ["backtrace"] }
