[package]
name = "ord_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bitcoin = "=0.30.2"
hex = "=0.4.3"
ordinals = "=0.0.8"

[dependencies.flutter_rust_bridge]
package = "flutter_rust_bridge"
version = "=2.5.0"

[build-dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
flutter_rust_bridge_codegen = "2.5"
